infra/traefik/networkpolicies/ingress-traefik.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-traefik
  namespace: traefik
spec:
  selector: app.kubernetes.io/instance == 'traefik'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: >-
          networkset == 'cloudflare' ||
          networkset == 'lan'
      destination:
        ports:
          - 2222
          - 8000
          - 8443
          - 9000
    - action: Allow
      protocol: UDP
      source:
        selector: >-
          networkset == 'cloudflare' ||
          networkset == 'lan'
      destination:
        ports:
          - 2222
          - 8000
          - 8443
          - 9000
